* Mon Apr  3 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Use dist for building tar balls
* Mon Apr  3 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.19 ====
* Fri Mar 31 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Final tidy up for gLite 3.1
* Fri Mar 31 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- ==== GridSite version 1.1.18 ====
* Wed Mar 29 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- New proxy destroy and time functions. 
* Tue Mar 28 2006 Shiv Kaushal <shiv@hep.man.ac.uk>
- Fixed bug in GACL admin interface that would cause
  internal server erorr sometimes when adding new 
  entries to and ACL.
* Sat Mar 25 2006 Shiv Kaushal <shiv@hep.man.ac.uk>
- Change delegation header to Proxy-Delegation-Service
  instead of Grst-
* Wed Mar 22 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add GRSTx509MakeDelegationID() to grst_x509.c
- Include code for new style delegation proxy storage
* Fri Mar 17 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Associate ldconfig %post in spec with -shared RPM
* Thu Mar 16 2006 Andrew McNab <Andrew.McNab@man.ac.uk>
- Fixes for 200/201 error pages produced by Apache
- Fixes for onetime passcode non-removal if HTTPS
- Include new multi-RPM spec file: gridsite-shared,
  gridsite-devel, gridsite-apache, gridsite-commands
  (replacing htcp) and gridsite-gsexec
* Fri Mar 03 2006 Shiv Kaushal <shiv@hep.man.ac.uk>
- Modify GridSiteDelegationURI directive to insert HTTP 
  headers instead of modifying HTML
* Mon Feb 6 2006 Shiv Kaushal <shiv@hep.man.ac.uk>
- Add GridSiteDelegationURI directive to mod_gridsite
  to allow Firefox extension to locate delegation service
* ==== GridSite version 1.1.17 ====
* Thu Jan 12 2005 Andrew McNab <Andrew.McNab@man.ac.uk>
- Add 5 minute window for VOMS attributes valid slightly
  in the future.
- Include Content-Range PUT support in mod_gridsite,
  adapted from mod_dav by David O Callaghan
- Return 201 Created when PUT creates a file
* Mon Dec 5 2005 Andrew McNab <Andrew.McNab@man.ac.uk>